[package]
name = "async-spin-sleep"
version = "0.3.1"
edition = "2021"
description = "A crate providing a highly accurate asynchronous timer for multiple async tasks using spin sleep in a single thread."
repository = "https://github.com/kang-sw/async-spin-sleep-rs"
authors = [
    "Stephen Kang(swkang@pxscope.com)",
    "Seungwoo Kang(ki6080@gmail.com)",
]
license = "MIT"
keywords = ["async", "sleep"]

[dependencies]
thiserror = "1.0"
educe = "0.4"
rustversion = "1.0"
crossbeam = "0.8"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
static_assertions = "1"
